--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-svg-sprite": "^1.3.7",
     "gulp-uglify": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
+    "postcss-reporter": "^5.0.0",
+    "stylelint": "^8.2.0",
     "yargs": "^9.0.1"
   }
 }
