--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "tonik",
+  "name": "es6-gulp4-and-other-buzz-words",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel-node ./node_modules/gulp/bin/gulp",
+    "build-dev": "babel-node ./node_modules/gulp/bin/gulp dev",
+    "build-prod": "babel-node ./node_modules/gulp/bin/gulp --prod"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "keywords": [],
-  "author": "",
+  "author": "Matthew Macartney",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "cssnano": "^3.10.0",
@@ -19,12 +28,16 @@
     "gulp-copy": "^1.0.1",
     "gulp-flatten": "^0.3.1",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-generate-contents": "^0.3.2",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-uglify": "^3.0.0",
+    "gulp-wrapper": "^1.0.0",
     "postcss-pxtorem": "^4.0.1",
     "postcss-reporter": "^5.0.0",
     "stylelint": "^8.2.0",
