--- a/package.json
+++ b/package.json
@@ -10,37 +10,37 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "@babel/preset-env"
     ]
   },
   "keywords": [],
   "author": "Matthew Macartney",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "cssnano": "^3.10.0",
-    "gulp": "gulpjs/gulp#4.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "autoprefixer": "^9.5.1",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.1",
     "gulp-concat": "^2.6.1",
-    "gulp-copy": "^1.0.1",
-    "gulp-flatten": "^0.3.1",
+    "gulp-copy": "^4.0.1",
+    "gulp-flatten": "^0.4.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-postcss": "^7.0.0",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sass-generate-contents": "^0.3.2",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-svg-sprite": "^1.3.7",
-    "gulp-uglify": "^3.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-generate-contents": "^1.0.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-wrapper": "^1.0.0",
     "postcss-pxtorem": "^4.0.1",
-    "postcss-reporter": "^5.0.0",
-    "stylelint": "^8.2.0",
-    "yargs": "^9.0.1"
+    "postcss-reporter": "^6.0.1",
+    "stylelint": "^10.0.1",
+    "yargs": "^13.2.2"
   }
 }
